--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "drizzle-orm": "^0.44.6",
+    "groq-sdk": "^0.33.0",
     "hono": "^4.9.12",
     "pino": "^10.0.0",
     "pino-pretty": "^13.1.2",
