--- a/web/package.json
+++ b/web/package.json
@@ -23,5 +23,13 @@
 		"tailwindcss": "^4.1.13",
 		"typescript": "^5.9.2",
 		"vite": "^7.1.7"
+	},
+	"dependencies": {
+		"@lottiefiles/dotlottie-svelte": "^0.8.5",
+		"daisyui": "^5.3.7",
+		"formsnap": "^2.0.1",
+		"svelte-sonner": "^1.0.5",
+		"sveltekit-superforms": "^2.28.0",
+		"zod": "^4.1.12"
 	}
 }
