--- a/web/package.json
+++ b/web/package.json
@@ -20,6 +20,7 @@
 		"@tailwindcss/vite": "^4.1.13",
 		"svelte": "^5.39.5",
 		"svelte-check": "^4.3.2",
+		"sveltekit-sse": "^0.14.3",
 		"tailwindcss": "^4.1.13",
 		"typescript": "^5.9.2",
 		"vite": "^7.1.7"
@@ -27,6 +28,7 @@
 	"dependencies": {
 		"@lottiefiles/dotlottie-svelte": "^0.8.5",
 		"@lucide/svelte": "^0.546.0",
+		"chart.js": "^4.5.1",
 		"daisyui": "^5.3.7",
 		"formsnap": "^2.0.1",
 		"svelte-sonner": "^1.0.5",
