--- a/web/package.json
+++ b/web/package.json
@@ -31,6 +31,7 @@
 		"chart.js": "^4.5.1",
 		"daisyui": "^5.3.7",
 		"formsnap": "^2.0.1",
+		"svelte-select": "^5.8.3",
 		"svelte-sonner": "^1.0.5",
 		"sveltekit-superforms": "^2.28.0",
 		"zod": "^4.1.12"
